# ahp-verified

./: .gitignore  NOTICE  README.md  RELEASING.md  REPRODUCIBILITY.md  VERIFICATION.md
.github/workflows/: ci.yml  publish-dotnet.yml  publish-npm.yml  publish-pypi.yml
corpus/: PROVENANCE.md  SHA256SUMS
corpus/reducers/: 001-root-agentschanged.json  002-root-activesessionschanged.json  003-session-ready.json  004-session-creationfailed.json  005-session-turnstarted.json  006-turnstarted-with-queuedmessageid-removes-from-queuedmessages.json  007-turnstarted-with-queuedmessageid-removes-last-queued-message.json  008-turnstarted-with-queuedmessageid-removes-matching-steering-message.json  009-turnstarted-without-queuedmessageid-does-not-touch-pending-messages.json  010-session-delta-appends-content.json  011-session-delta-with-wrong-turnid-is-no-op.json  012-session-delta-without-activeturn-is-no-op.json  013-session-responsepart-adds-to-responseparts.json  014-session-turncomplete-finalizes-turn.json  015-session-turncancelled-finalizes-turn.json  016-session-error-finalizes-turn-with-error.json  017-turncomplete-force-cancels-in-progress-tool-calls.json  018-turncomplete-with-wrong-turnid-is-no-op.json  019-tool-call-full-lifecycle-start-delta-ready-confirmed-complete.json  020-tool-call-ready-with-auto-confirm-transitions-to-running.json  021-tool-call-denied-transitions-to-cancelled.json  022-tool-call-result-confirmation-pending-approved.json  023-tool-call-result-denied-cancelled-with-result-denied-reason.json  024-tool-call-complete-from-pending-confirmation-defaults-confirmed.json  025-tool-call-actions-for-unknown-toolcallid-are-no-op.json  026-toolcallready-transitions-running-tool-back-to-pending-confirmation.json  027-toolcallready-re-confirmation-approved-transitions-back-to-running.json  028-toolcallready-re-confirmation-denied-transitions-to-cancelled.json  029-toolcallready-updates-pending-confirmation-tool-calls.json  030-session-titlechanged-updates-title.json  031-session-usage-updates-usage-on-active-turn.json  032-session-reasoning-appends-reasoning-content.json  034-session-servertoolschanged-sets-server-tools.json  035-session-activeclientset-adds-client.json  036-session-activeclientset-replaces-client.json  039-set-steering-message.json  040-replace-existing-steering-message.json  041-update-steering-message-content-via-set-with-same-id.json  042-remove-steering-message.json  043-remove-steering-message-is-no-op-for-mismatched-id.json  (+192 more)
cpp/: CMakeLists.txt  README.md
cpp-via-dafny-next/: .gitignore  CMakeLists.txt  README.md  regenerate.sh
cpp-via-dafny-next/ahp-core-ffi/: Cargo.toml
cpp-via-dafny-next/ahp-core-ffi/src/: _dafny_externs.rs  ahpcore.rs  ffi.rs  lib.rs
cpp-via-dafny-next/evidence/: 01-rs-version-probe.txt  03-nightly-cpp-and-rs.txt  04-runtime-reverify.txt  05-regenerate-from-scratch.txt
cpp-via-dafny-next/examples/: ahp_corpus.cpp  ahp_terminal_demo.cpp
cpp-via-dafny-next/include/: ahp_core.h
cpp-via-dafny-next/scripts/: patch-determinism.py
cpp-via-dotnet/: .gitignore  CMakeLists.txt  README.md
cpp-via-dotnet/evidence/: build-environment.txt  cpp-demo-output.txt
cpp-via-dotnet/examples/: ahp_demo.cpp
cpp-via-dotnet/include/: ahp_core.h
cpp-via-dotnet/scripts/: build.sh
cpp-via-dotnet/src/: Ahp.Core.Native.csproj  AhpNative.cs
cpp-via-go/: .gitignore  CMakeLists.txt  README.md  regenerate.sh
cpp-via-go/bridge/: ahp_bridge.go  go.mod
cpp-via-go/cmake/: ahp_verifiedConfig.cmake.in
cpp-via-go/evidence/: E1-regenerate-from-scratch.txt  E2-cpp-demo-run.txt  E3-cmake-build-test-install.txt  E4-downstream-find-package.txt  E5-symbol-provenance.txt
cpp-via-go/examples/: ahp_demo.cpp
cpp-via-go/examples/downstream/: CMakeLists.txt  main.cpp
cpp-via-go/include/: ahp_verified.h  libahpverified.h
cpp/evidence/: E1-translate-default.txt  E2-library-unicode-conflict.txt  E3-version-unbounded-int.txt  E4-feature-probes.txt  E5-runtime-header-bug.txt  E6-patched-runtime-works.txt  E7-package-build.txt
cpp/smoke/: probe_ho32.dfy  probe_int.dfy  probe_ok-cpp.dtr  probe_ok.cpp  probe_ok.dfy  probe_ok.h
cs/: LICENSE  README.md  build.sh
docs/: _config.yml  ffi-safety.md  index.html
go/: BUILDING.md  EXTERN.md  Makefile  README.md  ahp_smoke_test.go  go.mod  regenerate.sh
go/AhpSkeleton/: AhpSkeleton.go
go/Annotations/: Annotations.go
go/Canvas/: Canvas.go
go/Changeset/: Changeset.go
go/Chat/: Chat.go
go/ClientMain/: ClientMain.go
go/ConfluxBatchRoute/: ConfluxBatchRoute.go
go/ConfluxBudgetConvergence/: ConfluxBudgetConvergence.go
go/ConfluxChannel/: ConfluxChannel.go
go/Session/: Session.go
java/: README.md  pom.xml  regenerate.sh
js/: .gitignore  README.md  package-lock.json  package.json
mapper/: AhpHostMapper.cs  Mapper.csproj  ahp-host-mapper.mjs
py/: .gitignore  LICENSE  README.md  extract.sh  pyproject.toml  smoke_test.py
py/src/agent_host_protocol/: __init__.py
py/src/agent_host_protocol/_core/: AhpSkeleton.py  Annotations.py  Canvas.py  Changeset.py  Chat.py  ClientMain.py  ConfluxBatchRoute.py  ConfluxBudgetConvergence.py  ConfluxChannel.py  ConfluxChannelManifest.py  ConfluxCodec.py  ConfluxCommand.py  ConfluxCommandIdentity.py  ConfluxCommandIdentityCapability.py  ConfluxContentAddress.py  ConfluxContentLength.py  ConfluxContract.py  ConfluxConvergence.py  ConfluxDecimalText.py  ConfluxDedupe.py  ConfluxDelimited.py  ConfluxDurableHistory.py  ConfluxExtern.py  ConfluxFilterKeys.py  ConfluxFixpoint.py  ConfluxGenericCodec.py  ConfluxHttpCapability.py  ConfluxHttpService.py  ConfluxIoCapability.py  ConfluxJoin.py  ConfluxJsonRpc.py  ConfluxJsonText.py  ConfluxKeyedOps.py  ConfluxMapValues.py  ConfluxMerge.py  ConfluxOperators.py  ConfluxOrderedLog.py  ConfluxProduct.py  ConfluxPrune.py  ConfluxResolve.py  (+19 more)
run/: ahp_demo.dfy
spec/: ahp.dfy  ahp_skeleton.dfy  annotations.dfy  canvas.dfy  changeset.dfy  channel_laws.dfy  chat.dfy  client_main.dfy  command.dfy  core_lib.dfy  fidelity.dfy  resource_watch.dfy  session.dfy  terminal.dfy  turn_window_proposal.dfy  version.dfy
(+282 files in other folders)
