[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-host-protocol"
version = "0.1.0"
description = "Formally verified reducer core for the Agent Host Protocol (AHP)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Joshua Mouch", email = "josh@mouch.name" }]
maintainers = [{ name = "Joshua Mouch", email = "josh@mouch.name" }]
keywords = [
    "ahp",
    "agent-host-protocol",
    "formal-verification",
    "dafny",
    "reducer",
    "protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/joshmouch/agent-host-protocol"
Source = "https://github.com/joshmouch/agent-host-protocol"
Issues = "https://github.com/joshmouch/agent-host-protocol/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agent_host_protocol" = ["py.typed"]
